smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/enum-values/intEnum-with-float.smithy
// smithy.example#Foo$BAR: intEnum members do not support floating point values
$version: "2.0"

namespace smithy.example

intEnum Foo {
    BAR = 1.5
}
